--- a/public/stuntmaker/index.html
+++ b/public/stuntmaker/index.html
@@ -8,7 +8,7 @@
     name='description'>
   <meta content='width=device-width, initial-scale=1' name='viewport'>
   <link href='favicon.ico' rel='shortcut icon'>
-  <meta content='http://fate-srd.com/stunt-maker/img/sharing.png' property='og:image'>
+  <meta content='https://fate-srd.com/stunt-maker/img/sharing.png' property='og:image'>
   <meta content='The Fate Stuntmaker is a tool for inspiring the creation of stunts for the Fate RPG.'
     property='og:description'>
   <link href='css/main.css' rel='stylesheet'>
@@ -41,13 +41,14 @@
   <footer>
     <div class='wrapper'>
       <img alt='Powered by Fate' src='img/powered-by-fate.svg'>
-      <p>This site was created by <a href="http://randyoest.com">Amazing Rando Design</a> and is based on a tool created
+      <p>This site was created by <a href="https://randyoest.com">Amazing Rando Design</a> and is based on a tool
+        created
         by Fred Hicks and Dave Joria.</p>
       <p>This site is not affiliated with Evil Hat Productions, LLC.</p>
-      <p>This work is based on <a href="http://www.faterpg.com/">Fate Core System</a> and Fate Accelerated Edition,
+      <p>This work is based on <a href="https://www.faterpg.com/">Fate Core System</a> and Fate Accelerated Edition,
         products of Evil Hat Productions, LLC, developed, authored, and edited by Leonard Balsera, Brian Engard, Jeremy
         Keller, Ryan Macklin, Mike Olson, Clark Valentine, Amanda Valentine, Fred Hicks, and Rob Donoghue, and licensed
-        for our use under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0
+        for our use under the <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0
           Unported license</a>.</p>
       <p>Fate&trade; is a trademark of Evil Hat Productions, LLC. The Powered by Fate logo is &copy; Evil Hat
         Productions, LLC and is used with permission.</p>
