--- a/public/stuntmaker/index.html
+++ b/public/stuntmaker/index.html
@@ -57,10 +57,10 @@
     </div>
   </footer>
   <script src='//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
-  <script>
+  <!-- <script>
     window.jQuery ||
       document.write('<script src="/js/jquery-1.7.2.min.js"></script>');
-  </script>
+  </script> -->
   <script src='js/main.js'></script>
 </body>
 
