--- a/public/stuntmaker/index.html
+++ b/public/stuntmaker/index.html
@@ -8,7 +8,7 @@
     name='description'>
   <meta content='width=device-width, initial-scale=1' name='viewport'>
   <link href='favicon.ico' rel='shortcut icon'>
-  <meta content='https://fate-srd.com/sharing.png' property='og:image'>
+  <meta content='https://fate-srd.com/images/sharing.png' property='og:image'>
   <meta content='The Fate Stuntmaker is a tool for inspiring the creation of stunts for the Fate RPG.'
     property='og:description'>
   <link href='css/main.css' rel='stylesheet'>
